{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 30,
  "lineage": "4f7fc875-33a1-8094-4a66-59091658dc24",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "talos",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "autoscale_configuration": [
              {
                "max_capacity": 2,
                "min_capacity": 1
              }
            ],
            "backend": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/backendAddressPools/talos-ingress-backend",
                "ip_addresses": [
                  "10.0.0.4"
                ],
                "name": "talos-ingress-backend"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "certificate_chain_validation_enabled": true,
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/backendHttpSettingsCollection/nginx-ingress-http",
                "name": "nginx-ingress-http",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 32080,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "sni_name": "",
                "sni_validation_enabled": true,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/frontendIPConfigurations/appgw-public-frontend",
                "name": "appgw-public-frontend",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/publicIPAddresses/pip-application-gateway",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/gatewayIPConfigurations/appgw-ip-configuration",
                "name": "appgw-ip-configuration",
                "subnet_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-application-gateway"
              }
            ],
            "global": [],
            "http2_enabled": false,
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/frontendIPConfigurations/appgw-public-frontend",
                "frontend_ip_configuration_name": "appgw-public-frontend",
                "frontend_port_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos",
            "identity": [],
            "listener": [],
            "location": "westeurope",
            "name": "appgw-talos",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/backendAddressPools/talos-ingress-backend",
                "backend_address_pool_name": "talos-ingress-backend",
                "backend_http_settings_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/backendHttpSettingsCollection/nginx-ingress-http",
                "backend_http_settings_name": "nginx-ingress-http",
                "http_listener_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/applicationGateways/appgw-talos/requestRoutingRules/route-to-nginx",
                "name": "route-to-nginx",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-talos-azure",
            "rewrite_rule_set": [],
            "routing_rule": [],
            "sku": [
              {
                "capacity": 0,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "",
                "policy_type": ""
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "appgw-talos",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_network_interface.worker",
            "azurerm_public_ip.application_gateway",
            "azurerm_resource_group.talos",
            "azurerm_subnet.application_gateway",
            "azurerm_subnet.worker",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "talos",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/natGateways/nat-talos",
            "idle_timeout_in_minutes": 10,
            "location": "westeurope",
            "name": "nat-talos",
            "resource_group_name": "rg-talos-azure",
            "sku_name": "Standard",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "talos-azure"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nat-talos",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_resource_group.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "talos",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/natGateways/nat-talos|/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/publicIPAddresses/pip-nat-gateway",
            "nat_gateway_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/natGateways/nat-talos",
            "public_ip_address_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/publicIPAddresses/pip-nat-gateway"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.talos",
            "azurerm_public_ip.nat_gateway",
            "azurerm_resource_group.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkInterfaces/nic-talos-worker-1",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-worker"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "nic-talos-worker-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-talos-azure"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-talos-worker-1",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_resource_group.talos",
            "azurerm_subnet.worker",
            "azurerm_virtual_network.talos"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkInterfaces/nic-talos-worker-2",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-worker"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "nic-talos-worker-2",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-talos-azure"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-talos-worker-2",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_resource_group.talos",
            "azurerm_subnet.worker",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "application_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkSecurityGroups/nsg-application-gateway",
            "location": "westeurope",
            "name": "nsg-application-gateway",
            "resource_group_name": "rg-talos-azure",
            "security_rule": [],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "talos-azure"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-application-gateway",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_resource_group.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkSecurityGroups/nsg-control-plane",
            "location": "westeurope",
            "name": "nsg-control-plane",
            "resource_group_name": "rg-talos-azure",
            "security_rule": [],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "talos-azure"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-control-plane",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_resource_group.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkSecurityGroups/nsg-worker",
            "location": "westeurope",
            "name": "nsg-worker",
            "resource_group_name": "rg-talos-azure",
            "security_rule": [],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "talos-azure"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-worker",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_resource_group.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "application_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/publicIPAddresses/pip-application-gateway",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.0.0.4",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-application-gateway",
            "resource_group_name": "rg-talos-azure",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "talos-azure"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-application-gateway",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_resource_group.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/publicIPAddresses/pip-nat-gateway",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.0.0.4",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-nat-gateway",
            "resource_group_name": "rg-talos-azure",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "talos-azure"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-nat-gateway",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_resource_group.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "application_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-application-gateway",
            "name": "snet-application-gateway",
            "network_security_group_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkSecurityGroups/nsg-application-gateway",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-talos-azure",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-talos"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-application-gateway",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001",
            "virtual_network_name": "vnet-talos"
          },
          "dependencies": [
            "azurerm_resource_group.talos",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-control-plane",
            "name": "snet-control-plane",
            "network_security_group_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkSecurityGroups/nsg-control-plane",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-talos-azure",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-talos"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-control-plane",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001",
            "virtual_network_name": "vnet-talos"
          },
          "dependencies": [
            "azurerm_resource_group.talos",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-worker",
            "name": "snet-worker",
            "network_security_group_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkSecurityGroups/nsg-worker",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-talos-azure",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-talos"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-worker",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001",
            "virtual_network_name": "vnet-talos"
          },
          "dependencies": [
            "azurerm_resource_group.talos",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-control-plane",
            "nat_gateway_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/natGateways/nat-talos",
            "subnet_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-control-plane"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.talos",
            "azurerm_resource_group.talos",
            "azurerm_subnet.control_plane",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-worker",
            "nat_gateway_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/natGateways/nat-talos",
            "subnet_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-worker"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.talos",
            "azurerm_resource_group.talos",
            "azurerm_subnet.worker",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "application_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-application-gateway",
            "network_security_group_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkSecurityGroups/nsg-application-gateway",
            "subnet_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-application-gateway"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.application_gateway",
            "azurerm_resource_group.talos",
            "azurerm_subnet.application_gateway",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-control-plane",
            "network_security_group_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkSecurityGroups/nsg-control-plane",
            "subnet_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-control-plane"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.control_plane",
            "azurerm_resource_group.talos",
            "azurerm_subnet.control_plane",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-worker",
            "network_security_group_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/networkSecurityGroups/nsg-worker",
            "subnet_id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos/subnets/snet-worker"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.worker",
            "azurerm_resource_group.talos",
            "azurerm_subnet.worker",
            "azurerm_virtual_network.talos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "talos",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "id": "/subscriptions/00000000-0000-0000-0000-000000000001/resourceGroups/rg-talos-azure/providers/Microsoft.Network/virtualNetworks/vnet-talos",
            "location": "westeurope",
            "name": "vnet-talos",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-talos-azure",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "talos-azure"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-talos",
            "resource_group_name": "rg-talos-azure",
            "subscription_id": "00000000-0000-0000-0000-000000000001"
          },
          "dependencies": [
            "azurerm_resource_group.talos"
          ]
        }
      ]
    }
  ]
}